force-app/main/default/objects/Run_Triggers__c/Run_Triggers__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>scaleMatters Run Triggers</label>
</CustomObject>