force-app/main/default/objects/Run_Triggers__c/fields/Deactivate_All__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_All__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivate All</label>
    <type>Checkbox</type>
</CustomField>