force-app/main/default/objects/Run_Triggers__c/fields/Run_Account_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Run_Account_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Account Triggers</label>
    <type>Checkbox</type>
</CustomField>