force-app/main/default/objects/Run_Triggers__c/fields/Run_Activity_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Run_Activity_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Activity Trigger</label>
    <type>Checkbox</type>
</CustomField>