force-app/main/default/objects/Run_Triggers__c/fields/Run_Opportunity_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Run_Opportunity_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Opportunity Triggers</label>
    <type>Checkbox</type>
</CustomField>